<resources>
    <string name="app_name"><b>WDyS</b></string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="btnCapture">Start recording</string>
    <string name="btnPlay">Start play record</string>
    <string name="video_button">Video Record Button</string>
    <string name="camera_button">Camera Capture Button</string>
    <string name="testo">Keep record the statue\'s face, soon will appear something!</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="go_video">Record video</string>
    <string name="go_back">Register audio</string>

</resources>