<?xml version="1.0" encoding="utf-8"?>
<!--XML code for activity_main.xml-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AudioActivity">

    <TextView
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:id="@+id/title"
        android:text="Register Your audio"
        android:fontFamily="sans-serif-black"
        android:textSize="20pt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/back"
        android:background="#a6a6a6"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:drawableTopCompat="@drawable/back2"/>



    <TextView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="250dp"
        android:id="@+id/tt"
        android:textSize="12pt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/replay_button"
        android:padding="10dp"
        android:text="@string/start_recording"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/rec"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/replay_button"
        android:padding="10dp"
        android:text="@string/stop_recording"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/no_rec"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording"
        android:textSize="15pt"
        android:text="recording..."
        android:textAlignment="center"
        android:textColor="@color/red"
        android:layout_marginBottom="110dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>



    <Button
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/replay_button"
        android:padding="10dp"
        android:text="@string/play_recording"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/play"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btnStopPlay"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/replay_button"
        android:lines="2"
        android:padding="10dp"
        android:text="@string/stop_playing"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/stop"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentEnd="true"/>


    <Button
        android:id="@+id/record_anotherone"
        android:layout_width="206dp"
        android:layout_height="100dp"
        android:background="@drawable/bottom_button"
        android:padding="10dp"
        android:text="@string/go_back"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/go_video"
        android:layout_width="206dp"
        android:layout_height="100dp"
        android:background="@drawable/bottom_button"
        android:padding="10dp"
        android:text="@string/go_video"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/go_video"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:visibility="invisible"
        android:textColor="#ff0000"
        android:textSize="25dp"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"/>




</RelativeLayout>
